ola-parser/src/testdata/syntaxTests/natspec/docstring_author_function.sol
contract C {
    /// @author author
    fn iHaveAuthor()  {}
}
// ----
// DocstringParsingError 6546: (17-35): Documentation tag @author not valid for functions.
